--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "formidable": "^3.5.2",
+    "my-audio-transcriber": "file:",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
