--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "formidable": "^3.5.2",
     "my-audio-transcriber": "file:",
-    "next": "15.1.5",
+    "next": "^15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
