--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "formidable": "^3.5.2",
     "my-audio-transcriber": "file:",
     "next": "^15.3.4",
