--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,11 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "pip install -r Backend/requeriment.txt"
+buildCommand = "cd Backend && pip install -r requeriment.txt"
 
 [deploy]
 startCommand = "cd Backend && uvicorn main:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[nixpacks]
+nixPkgs = ["python39", "pip"]
