--- a/railway.toml
+++ b/railway.toml
@@ -1,14 +1,15 @@
 [build]
 builder = "NIXPACKS"
-# ELIMINAR O COMENTAR la línea buildCommand, ¡NO LA NECESITAS!
-# buildCommand = "cd Backend && python3.9 -m pip install -r requeriment.txt" 
+# ¡NUEVA LÍNEA CLAVE! Indica a Nixpacks que la aplicación está en esta subcarpeta.
+baseDirectory = "Backend"
 
 [deploy]
-# DEJAR EL START COMMAND:
-startCommand = "cd Backend && uvicorn main:app --host 0.0.0.0 --port $PORT"
+# El startCommand ya NO necesita el 'cd Backend' porque la baseDirectory ya apunta allí.
+# ASUMIMOS que tu 'main.py' está directamente dentro de 'Backend'.
+startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [nixpacks]
-# DEJAR EL NIXPKGS PARA FORZAR LA VERSIÓN DE PYTHON 3.9:
+# Forzamos la versión de Python.
 nixpkgs = ["python39"]
