--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,10 @@
 [build]
 builder = "NIXPACKS"
-baseDirectory = "Backend" 
-# CAMBIO CLAVE: Usamos 'python3' en lugar de 'python3.9'.
-buildCommand = "python3 -m pip install -r requeriment.txt" 
+# Se eliminan baseDirectory y buildCommand
+# Nixpacks lo detectará automáticamente en la raíz.
 
 [deploy]
+# Se elimina el 'cd Backend &&' porque el código está en la raíz.
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
