--- a/railway.toml
+++ b/railway.toml
@@ -10,4 +10,7 @@ restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [nixpacks]
-nixpkgs = ["python39"]
+nixpkgs = [
+    "python39",
+    "lilypond"
+]
