--- a/railway.toml
+++ b/railway.toml
@@ -5,7 +5,7 @@ builder = "NIXPACKS"
 
 [deploy]
 # Se elimina el 'cd Backend &&' porque el código está en la raíz.
-startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+startCommand = "python3 -m uvicorn main:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
