--- a/railway.toml
+++ b/railway.toml
@@ -1,16 +1,12 @@
 [build]
-builder = "NIXPACKS"
-# ELIMINAR ESTA LÍNEA: buildCommand = "source $NIXPACKS_ACTIVATE_ENV && pip install -r requeriment.txt" 
+# CAMBIO CLAVE: Usamos Dockerfile en lugar de NIXPACKS
+builder = "DOCKERFILE"
+# El resto de la configuración se maneja en el Dockerfile
 
 [deploy]
-# MANTENER la corrección del inicio, que es la forma más robusta de arrancar la app.
-startCommand = "python3 -m uvicorn main:app --host 0.0.0.0 --port $PORT" 
+# El startCommand del Dockerfile (CMD) anulará esto, pero lo dejamos simple.
+startCommand = "" 
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
-[nixpacks]
-nixpkgs = [
-    "python39",
-    "lilypond",
-    "pip" # Dejar 'pip' aquí para asegurar que se instala como binario.
-]
+# Eliminar completamente la sección [nixpacks]
