--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-audio-transcriber",
-  "version": "0.1.0",
+  "name": "piano-transcription",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.10.0",
-    "formidable": "^3.5.2",
-    "my-audio-transcriber": "file:",
     "next": "^15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
